# my-claude-code

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  README.md  main.py  pyproject.toml
bugs/: 1.md  2.md
llm_wiki/: README.md  architecture.md  bugs_and_lessons.md  decisions.md  evals.md  index.md  log.md  project_overview.md  roadmap.md
src/my_claude_code/: __init__.py  __main__.py  cli.py  config.py  runtime.py
src/my_claude_code/compaction/: __init__.py  compaction.py
src/my_claude_code/managers/: __init__.py  background.py  message_bus.py  registry.py  sessions.py  skills.py  tasks.py  team.py  todo.py
src/my_claude_code/managers/types/: sessions.py
src/my_claude_code/tools/: __init__.py  compaction.py  context.py  contracts.py  filesystem.py  multi_agents.py  registry.py  shell.py  skills.py  task_board.py  team.py  todo.py  utils.py
test/: test_sessions.py  test_shell_safety.py
